trigger: add trigger for rumprun examples
Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/trigger/notify.yml
+++ b/trigger/notify.yml
@@ -44,8 +44,12 @@ graph-refine:
 - l4v
 hol:
 - l4v
+iperf:
+- rumprun-sel4-demoapps
 isabelle:
 - l4v
+leveldb:
+- rumprun-sel4-demoapps
 libzmq:
 - camkes-vm-examples
 lwip:
@@ -58,6 +62,7 @@ musllibc:
 - camkes-vm-examples
 - sel4-tutorials
 - sel4webserver
+- rumprun-sel4-demoapps
 nanopb:
 - seL4
 - sel4bench
@@ -83,6 +88,9 @@ pruner:
 - camkes-tool
 rumprun:
 - camkes-tool
+- rumprun-sel4-demoapps
+rumprun-packages:
+- rumprun-sel4-demoapps
 sel4:
 - l4v
 - sel4bench
@@ -90,6 +98,7 @@ sel4:
 - camkes-vm-examples
 - sel4-tutorials
 - sel4webserver
+- rumprun-sel4-demoapps
 sel4_libs:
 - seL4
 - sel4bench
@@ -97,6 +106,7 @@ sel4_libs:
 - camkes-vm-examples
 - sel4-tutorials
 - sel4webserver
+- rumprun-sel4-demoapps
 sel4_projects_libs:
 - seL4
 - sel4bench
@@ -111,6 +121,7 @@ sel4_tools:
 - camkes-vm-examples
 - sel4-tutorials
 - sel4webserver
+- rumprun-sel4-demoapps
 sel4runtime:
 - seL4
 - sel4bench
@@ -118,6 +129,7 @@ sel4runtime:
 - camkes-vm-examples
 - sel4-tutorials
 - sel4webserver
+- rumprun-sel4-demoapps
 sel4test:
 - seL4
 util_libs:
@@ -127,3 +139,4 @@ util_libs:
 - camkes-vm-examples
 - sel4-tutorials
 - sel4webserver
+- rumprun-sel4-demoapps
