tutorials: allow xml input manifest
Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/tutorials/action.yml
+++ b/tutorials/action.yml
@@ -20,6 +20,9 @@ inputs:
   matrix:
     description: Set to true to dump build matrix only
     required: false
+  xml:
+    description: sel4test xml manifest to test
+    required: false
 
 runs:
   using: 'docker'
