platforms: enable RPI4 builds and tests
Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/seL4-platforms/platforms.yml
+++ b/seL4-platforms/platforms.yml
@@ -211,10 +211,9 @@ platforms:
     arch: arm
     modes: [64]
     platform: rpi4
-    req: [rpi4]
+    req: [pi4B]
     image_platform: bcm2711
     march: armv8a
-    no_hw_build: true
 
   TX1:
     arch: arm
