rump-hello-hw: hardware run for the rumprun tests
Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/rump-hello-hw/action.yml
+++ b/rump-hello-hw/action.yml
@@ -2,9 +2,9 @@
 #
 # SPDX-License-Identifier: BSD-2-Clause
 
-name: 'RumpRun Hello World'
+name: 'RumpRun Hello World Hardware'
 description: |
-  The rumprun hello-world test.
+  The rumprun hello-world test on hardware.
 author: Gerwin Klein <gerwin.klein@proofcraft.systems>
 
 inputs:
@@ -17,10 +17,15 @@ inputs:
   mode:
     description: Comma separated list of modes to build for. One of `{32, 64}.`
     required: false
-  xml:
-    description: sel4test xml manifest to test
+  index:
+    description: job index in matrix build
+    required: true
+  action_name:
+    description: 'internal -- do not use'
     required: false
+    default: 'rump-hello-hw'
 
 runs:
-  using: 'docker'
-  image: 'docker://sel4/rump-hello:latest'
+  using: 'node12'
+  main: '../js/index.js'
+  post: '../js/post.js'
