platforms: use march 'armv7' for ALLWINNER20
Allwinner A20 is uses a Cortex-A7 core.

Signed-off-by: Axel Heider <axelheider@gmx.de>

--- a/seL4-platforms/platforms.yml
+++ b/seL4-platforms/platforms.yml
@@ -260,7 +260,7 @@ platforms:
     arch: arm
     modes: [32]
     platform: allwinner20
-    # march: ?
+    march: armv7a
     disabled: true
     no_hw_build: true
 
