Support auth token for private repos
Supports passing in GitHub PA tokens for access to private repositories
and for now makes use of that support in aws-proofs, license-check, and
link-check actions.

Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/license-check/action.yml
+++ b/license-check/action.yml
@@ -7,6 +7,9 @@ description: 'Runs the FSFE reuse license tool'
 author: Gerwin Klein <kleing@unsw.edu.au>
 
 inputs:
+  token:
+    description: 'GitHub token for read access to repository'
+    required: false
   action_name:
     description: 'internal -- do not use'
     required: false
