--- a/aws-proofs/action.yml
+++ b/aws-proofs/action.yml
@@ -38,6 +38,9 @@ inputs:
   xml:
     description: 'Input manifest with specific repo revisions to test (optional)'
     required: false
+  token:
+    description: 'Github token for repo read access'
+    required: false
   action_name:
     description: 'internal -- do not use'
     required: false
