--- a/link-check/action.yml
+++ b/link-check/action.yml
@@ -26,6 +26,9 @@ inputs:
   num_requests:
     description: 'Maximum number of concurrent requests'
     required: false
+  token:
+    description: 'GitHub token for read access to repository'
+    required: false
   verbose:
     description: 'Print more information if set (default unset)'
     required: false
