aws-proofs: support custom S3 bucket name
This makes it possible for other orgs to set up their own AWS proof
VMs and store the Isabelle image cache in their own S3 buckets.

Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/aws-proofs/action.yml
+++ b/aws-proofs/action.yml
@@ -28,6 +28,10 @@ inputs:
   cache_name:
     description: 'Custom cache name. Should contain at least L4V_ARCH.'
     required: false
+  cache_bucket:
+    description: 'Custom S3 bucket for the isabelle image cache.'
+    default: 'isabelle-images'
+    required: false
   skip_dups:
     description: 'Skip duplicate proofs. Set to empty string to run duplicate proofs'
     default: "1"
