platforms: second hifive board now operational
Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/seL4-platforms/platforms.yml
+++ b/seL4-platforms/platforms.yml
@@ -46,7 +46,7 @@ platforms:
     modes: [64]
     smp: [64]
     platform: hifive
-    req: [hifive1]
+    req: [hifive, hifive1]
     march: rv64imac
 
   SABRE:
