--- a/preprocess/action.yml
+++ b/preprocess/action.yml
@@ -11,7 +11,7 @@ author: Gerwin Klein <kleing@unsw.edu.au>
 
 inputs:
   L4V_ARCH:
-    description: 'Architecture to test. One of ARM, ARM_HYP, RISCV64, X64'
+    description: 'Architecture to test. One of ARM, ARM_HYP, AARCH64, RISCV64, X64'
     required: true
 
   L4V_FEATURES:
