cparser-run: use AARCH64 where appropriate
The previous use of L4V_ARCH X64 for aarch64 worked, but was a bit of
a hack. Since AARCH64 is now properly supported by the verification C
parser, we can use that one.

Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/cparser-run/builds.yml
+++ b/cparser-run/builds.yml
@@ -30,7 +30,7 @@ builds:
 
 - AARCH64:
     platform: TX2
-    l4v_arch: X64 # only word size relevant
+    l4v_arch: AARCH64
 
 - AARCH32HYP:
     platform: TK1
@@ -40,7 +40,7 @@ builds:
 
 - AARCH64HYP:
     platform: TX2
-    l4v_arch: X64 # only word size relevant
+    l4v_arch: AARCH64
     settings:
       ARM_HYP: "TRUE"
 
