platforms: test imx8mq2 board
Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/seL4-platforms/platforms.yml
+++ b/seL4-platforms/platforms.yml
@@ -81,9 +81,8 @@ platforms:
     modes: [64]
     smp: [64]
     platform: imx8mq-evk
-    req: [imx8mq]
+    req: [imx8mq2]
     march: armv8a
-    disabled: true
 
   IMX8MM_EVK:
     arch: arm
