github: restrict deployment actions to seL4 org
Running docker and other deployments to the seL4 accounts only makes
sense from the seL4 org, not from forks of this repository. This commit
should remove noise about missing secrets and failed tests from forks.

Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/.github/workflows/deploy-rumprun.yml
+++ b/.github/workflows/deploy-rumprun.yml
@@ -19,6 +19,7 @@ on:
 jobs:
   docker:
     name: Docker (RumpHello)
+    if: ${{ github.repository_owner == 'seL4' }}
     runs-on: ubuntu-latest
     steps:
     - uses: docker/setup-buildx-action@v1
