--- a/.github/workflows/deploy-cparser-builder.yml
+++ b/.github/workflows/deploy-cparser-builder.yml
@@ -30,6 +30,7 @@ on:
 jobs:
   docker:
     name: Docker (C Parser Builder)
+    if: ${{ github.repository_owner == 'seL4' }}
     runs-on: ubuntu-latest
     steps:
     - uses: docker/setup-buildx-action@v1
