--- a/.github/workflows/deploy-link-check.yml
+++ b/.github/workflows/deploy-link-check.yml
@@ -18,6 +18,7 @@ on:
 jobs:
   docker:
     name: Docker (Link Check)
+    if: ${{ github.repository_owner == 'seL4' }}
     runs-on: ubuntu-latest
     steps:
     - uses: docker/setup-buildx-action@v1
