--- a/.github/workflows/isabelle-mirror.yml
+++ b/.github/workflows/isabelle-mirror.yml
@@ -14,6 +14,7 @@ on:
 jobs:
   isabelle-mirror:
     name: 'Isabelle Mirror'
+    if: ${{ github.repository_owner == 'seL4' }}
     runs-on: ubuntu-latest
     env:
       ISA_MIRROR_TOKEN: ${{ secrets.ISA_MIRROR_TOKEN }}
