pass through PA tokens for private repo access
This enables further actions to be used on private repos.

Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/gitlint/action.yml
+++ b/gitlint/action.yml
@@ -10,6 +10,9 @@ inputs:
   config:
     description: 'Path within target repo to a custom .gitlint file'
     required: false
+  token:
+    description: 'GitHub token for read access to repository'
+    required: false
   action_name:
     description: 'internal -- do not use'
     required: false
