--- a/git-diff-check/action.yml
+++ b/git-diff-check/action.yml
@@ -9,6 +9,9 @@ description: |
 author: Gerwin Klein <kleing@unsw.edu.au>
 
 inputs:
+  token:
+    description: 'GitHub token for read access to repository'
+    required: false
   action_name:
     description: 'internal -- do not use'
     required: false
