--- a/thylint/action.yml
+++ b/thylint/action.yml
@@ -20,5 +20,5 @@ runs:
     - run: ${{ github.action_path }}/steps.sh
       shell: bash
       env:
-        INPUT_TOKEN: $${{ inputs.token }}
+        INPUT_TOKEN: ${{ inputs.token }}
         INPUT_DISABLE: ${{ inputs.disable }}
