aws-proofs: export C graph-lang
When SimplExportAndRefine is performed during an AWS proof run, save the
exported graph-lang for use in binary verification.

Signed-off-by: Matthew Brecknell <matt@kry10.com>

--- a/aws-proofs/action.yml
+++ b/aws-proofs/action.yml
@@ -42,6 +42,13 @@ inputs:
   xml:
     description: 'Input manifest with specific repo revisions to test (optional)'
     required: false
+  simpl_export:
+    description: |
+      Whether to export the C graph-lang for binary verification.
+      Set to any non-empty string to enable.
+      Ignored for architectures that don't support SimplExportAndRefine,
+      so it's safe to set across a matrix.
+    required: false
   ci_branch:
     description: 'ci-actions branch to use on AWS VM (optional)'
     default: 'master'
