--- a/aws-proofs/action.yml
+++ b/aws-proofs/action.yml
@@ -42,6 +42,10 @@ inputs:
   xml:
     description: 'Input manifest with specific repo revisions to test (optional)'
     required: false
+  ci_branch:
+    description: 'ci-actions branch to use on AWS VM (optional)'
+    default: 'master'
+    required: false
   token:
     description: 'Github token for repo read access'
     required: false
