--- a/seL4-platforms/platforms.yml
+++ b/seL4-platforms/platforms.yml
@@ -242,7 +242,7 @@ platforms:
     smp: [64]
     aarch_hyp: [64]
     platform: tx2
-    req: [tx2, tx2b]
+    req: [tx2a, tx2b]
     march: armv8a
 
   APQ8064:
