aws-proofs: add `L4V_FEATURES` support
Adds an `L4V_FEATURES` input to the aws-proofs action, and passes it
through to the AWS VM, where it used in the C kernel build. This allows
building the CSpec for the MCS kernel.

Signed-off-by: Matthew Brecknell <matt@kry10.com>

--- a/aws-proofs/action.yml
+++ b/aws-proofs/action.yml
@@ -11,6 +11,9 @@ inputs:
   L4V_ARCH:
     description: 'Architecture to test. One of ARM, ARM_HYP, RISCV64, X64'
     required: true
+  L4V_FEATURES:
+    description: 'Kernel features to test (optional). Either MCS or unset.'
+    requred: false
   session:
     description: 'Which proof session to run (space-separated string)'
     required: false
