fixup! add git-credentials-setup action
Signed-off-by: Matthew Brecknell <matt@kry10.com>

--- a/git-https-credentials-setup/action.yml
+++ b/git-https-credentials-setup/action.yml
@@ -26,6 +26,7 @@ inputs:
     description: |
       An identifier that can be used to distinguish multiple uses of
       this action in a job.
+    required: false
 
 runs:
   using: 'node12'
