--- a/seL4-platforms/platforms.yml
+++ b/seL4-platforms/platforms.yml
@@ -88,6 +88,7 @@ platforms:
     arch: arm
     modes: [32, 64]
     smp: [64]
+    aarch_hyp: [64]
     platform: maaxboard
     march: armv8a
     disabled: true
