github: make distinct workflow names
This helps to distinguish the workflows in the UI for manual triggers.

Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/.github/workflows/deploy-cparser-builder.yml
+++ b/.github/workflows/deploy-cparser-builder.yml
@@ -4,7 +4,7 @@
 
 # Build and push docker image on changes to relevant files
 
-name: Deploy
+name: Deploy CParser Builder
 
 # Why deploy the builder image if it is supposed to be ephemeral? Because we
 # couldn't get the docker GitHub action to refer to a local-only image, even
