--- a/.github/workflows/deploy-cparser-run.yml
+++ b/.github/workflows/deploy-cparser-run.yml
@@ -4,7 +4,7 @@
 
 # Build and push cparser-run docker image on changes to relevant files
 
-name: Deploy
+name: Deploy CParser Run
 
 on:
   # the real build trigger is in deploy-cparser-builder
