--- a/.github/workflows/deploy-tutorials.yml
+++ b/.github/workflows/deploy-tutorials.yml
@@ -4,7 +4,7 @@
 
 # Build and push cparser-run docker image on changes to relevant files
 
-name: Deploy
+name: Deploy Tutorial Test
 
 on:
   push:
