platforms: add RISCVVIRT64 for QEMU RISC-V virt
use RISCVVIRT64 instead of SPIKE64 for RISCV64

Signed-off-by: Axel Heider <axel.heider@hensoldt.net>

--- a/cparser-run/builds.yml
+++ b/cparser-run/builds.yml
@@ -21,7 +21,7 @@ builds:
     l4v_arch: ARM # only word size relevant for this test
 
 - RISCV64:
-    platform: SPIKE64
+    platform: RISCVVIRT64
     l4v_arch: RISCV64
 
 - AARCH32:
