--- a/seL4-platforms/platforms.yml
+++ b/seL4-platforms/platforms.yml
@@ -50,6 +50,15 @@ platforms:
     disabled: true
     no_hw_build: true
 
+  RISCVVIRT32:
+    arch: riscv
+    modes: [32]
+    platform: qemu-riscv-virt
+    simulation_binary: qemu-riscv-virt32
+    march: rv32imac
+    disabled: true
+    no_hw_build: true
+
   HIFIVE:
     arch: riscv
     modes: [64]
