sel4test-sim: enable MCS simulation tests
Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/sel4test-sim/builds.yml
+++ b/sel4test-sim/builds.yml
@@ -20,6 +20,7 @@ default:
 variants:
     debug: [debug, release]
     compiler: [gcc, clang]
+    mcs: ['', MCS]
     mode: [32, 64]
 
 # full variant scheme:
