platforms: temporarily remove hifive board
Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/seL4-platforms/platforms.yml
+++ b/seL4-platforms/platforms.yml
@@ -55,7 +55,7 @@ platforms:
     modes: [64]
     smp: [64]
     platform: hifive
-    req: [hifive, hifive1]
+    req: [hifive1] # [hifive, hifive1]
     march: rv64imac
 
   SABRE:
