sel4test-hw: enable DOM tests for release builds
Picking only release builds for now to not increase the overall number
of tests too much. Enable all other combinations by default, so only
SMP + DOM is excluded, but e.g. MCS_HYP_DOM is included.

Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/sel4test-hw/builds.yml
+++ b/sel4test-hw/builds.yml
@@ -14,5 +14,6 @@ variants:
     smp: ['', SMP]
     hyp: ['', hyp]
     mcs: ['', MCS]
+    domains: ['', DOM]
     compiler: [gcc, clang]
     mode: [32, 64]
