--- a/sel4test-hw/builds.yml
+++ b/sel4test-hw/builds.yml
@@ -14,6 +14,6 @@ variants:
     smp: ['', SMP]
     hyp: ['', hyp]
     mcs: ['', MCS]
-    domains: ['', DOM]
+    # domains: ['', DOM]
     compiler: [gcc, clang]
     mode: [32, 64]
