l4v-deploy: add a preprocess `manifest` input
For cpp-compatible updates initiated by an seL4 preprocess run only,
allow the target manifest file to be specified. This should make it
possible to implement separate workflows for cpp-compatible updates for
the devel.xml and mcs.xml manifests.

Signed-off-by: Matthew Brecknell <matt@kry10.com>

--- a/l4v-deploy/action.yml
+++ b/l4v-deploy/action.yml
@@ -16,6 +16,9 @@ inputs:
   preprocess:
     description: if set, deploy a prepresses bump instead of proof run.
     required: false
+  manifest:
+    description: manifest file for preprocess updates, e.g. mcs.xml
+    required: false
   action_name:
     description: 'internal -- do not use'
     required: false
