platforms: add SMP and HYP configurations to Odroid-C4
Signed-off-by: Ivan-Velickovic <i.velickovic@unsw.edu.au>

--- a/seL4-platforms/platforms.yml
+++ b/seL4-platforms/platforms.yml
@@ -151,6 +151,8 @@ platforms:
   ODROID_C4:
     arch: arm
     modes: [64]
+    aarch_hyp: [64]
+    smp: [64]
     platform: odroidc4
     req: [odroidc4_1]
     march: armv8a
