platforms: enable imx8mq again
Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/seL4-platforms/platforms.yml
+++ b/seL4-platforms/platforms.yml
@@ -97,9 +97,8 @@ platforms:
     modes: [64]
     smp: [64]
     platform: imx8mq-evk
-    req: [imx8mq2]
+    req: [imx8mq]
     march: armv8a
-    disabled: true
 
   MAAXBOARD:
     arch: arm
