camkes-vm: add vm_introspect
Signed-off-by: Axel Heider <axel.heider@hensoldt.net>

--- a/camkes-vm/builds.yml
+++ b/camkes-vm/builds.yml
@@ -92,3 +92,10 @@ builds:
 - vm_cross_connector:
     platform: ODROID_XU4
     success: 'Finished crossvm test script'
+- vm_introspect_xu4:
+    app: vm_introspect
+    platform: ODROID_XU4
+- vm_introspect_sim:
+    app: vm_introspect
+    platform: ARMVIRT
+    sim: true
