sel4bench: update toolchain versions
Update the toolchain versions that get
listed on the website to match Docker
container

Signed-off-by: Ivan-Velickovic <i.velickovic@unsw.edu.au>

--- a/sel4bench/builds.yml
+++ b/sel4bench/builds.yml
@@ -47,7 +47,7 @@ boards:
         core: A9
         soc: i.MX6
         clock: 1.0 GHz
-        compiler: arm-linux-gnueabi-gcc GNU 8.3.0
+        compiler: arm-linux-gnueabi-gcc GNU 10.2.1
     Haswell:
         soc: i7-4770
         clock: 3.4 GHz
@@ -56,17 +56,17 @@ boards:
         soc: i7-6700
         note: (without meltdown mitigation)
         clock: 3.4 GHz
-        compiler: gcc GNU 8.4.0
+        compiler: gcc GNU 10.2.1
     Jetson:
         core: A57
         soc: Tx1
         clock: 1.9 GHz
-        compiler: aarch64-linux-gnu-gcc GNU 8.3.0
+        compiler: aarch64-linux-gnu-gcc GNU 10.2.1
     Hifive:
         core: U54-MC
         soc: SiFive Freedom U540
         clock: 1.5 GHz
-        compiler: riscv64-unknown-linux-gnu-gcc GNU 10.2.0
+        compiler: riscv64-unknown-elf-gcc GNU 8.3.0
 
 results:
     Default:
