sel4bench: force MCS setting for PC99_MCS_64_noksw
Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/sel4bench/builds.yml
+++ b/sel4bench/builds.yml
@@ -42,9 +42,9 @@ more_builds:
     - PC99_MCS_64_noksw:
         platform: PC99
         mode: 64
-        mcs: MCS
         settings:
             KernelSkimWindow: "FALSE"
+            MCS: "TRUE"
 
 # for generating the results page:
 
