platforms: temporarily disable zcu102_2
Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/seL4-platforms/platforms.yml
+++ b/seL4-platforms/platforms.yml
@@ -207,7 +207,7 @@ platforms:
     modes: [64]
     smp: [64]
     platform: zynqmp
-    req: [zcu102, zcu102_2]
+    req: [zcu102] # , zcu102_2]
     march: armv8a
 
   ZYNQMP106:
