proofs+preprocess: introduce L4V_PLAT
Introduce L4V_PLAT input to select a board/platform variant of a
verification architecture (e.g. ARM-imx8 for L4V_ARCH=ARM and
L4V_PLAT=imx8).

This affects the aws-proofs and preprocess actions. The C parser action
uses a different mechanism for selecting architecture/platform.

Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/aws-proofs/action.yml
+++ b/aws-proofs/action.yml
@@ -14,6 +14,9 @@ inputs:
   L4V_FEATURES:
     description: 'Kernel features to test (optional). Either MCS or unset.'
     required: false
+  L4V_PLAT:
+    description: 'Platform variant to test (optional). Either a platform name or unset.'
+    required: false
   session:
     description: 'Which proof session to run (space-separated string)'
     required: false
