camkes-vm: add 64-bit minimal test on x86
Signed-off-by: Chris Guikema <chris.guikema@dornerworks.com>

--- a/camkes-vm/builds.yml
+++ b/camkes-vm/builds.yml
@@ -18,6 +18,9 @@ builds:
 - minimal:
     mode: 32
     req: haswell3
+- minimal_64:
+    mode: 64
+    req: haswell3
 - zmq_samples:
     mode: 64
     req: haswell3
