aws-proofs: provide optional NUM_DOMAINS override
If the NUM_DOMAINS input is set, the proof build system will override
the KernelNumDomains setting. We make the NUM_DOMAINS value part of
the cache key so that we get fast proofs on master for things that
already had a successful test on a pull request.

Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/aws-proofs/action.yml
+++ b/aws-proofs/action.yml
@@ -17,6 +17,9 @@ inputs:
   L4V_PLAT:
     description: 'Platform variant to test (optional). Either a platform name or unset.'
     required: false
+  NUM_DOMAINS:
+    description: 'Optional override for KernelNumDomains config setting.'
+    required: false
   session:
     description: 'Which proof session to run (space-separated string)'
     required: false
