--- a/sel4test-sim/action.yml
+++ b/sel4test-sim/action.yml
@@ -19,7 +19,7 @@ inputs:
     description: Comma separated list of modes (32/64) to filter test configs on.
     required: false
   compiler:
-    description: One of `{gcc, clang} to filter test configs on`
+    description: One of `{gcc, clang}` to filter test configs on.
     required: false
   xml:
     description: sel4test xml manifest to test
