--- a/sel4test-hw/Dockerfile
+++ b/sel4test-hw/Dockerfile
@@ -2,39 +2,26 @@
 #
 # SPDX-License-Identifier: BSD-2-Clause
 
-# The context of this Dockerfiles is the repo root (../)
-
 ARG WORKSPACE=/workspace
 ARG SCRIPTS=/ci-scripts
 ARG ACTION=sel4test-hw
 
-FROM trustworthysystems/sel4:latest
-
-RUN apt-get update \
-    && apt-get install -y --no-install-recommends \
-       libffi-dev \
-    && apt-get clean autoclean \
-    && apt-get autoremove --yes \
-    && rm -rf /var/lib/{apt,dpkg,cache,log}/
-RUN pip3 install junitparser PyGithub
+FROM sel4/sel4test-hw:latest
 
 ARG SCRIPTS
 ARG ACTION
-RUN mkdir ${SCRIPTS}
-COPY ${ACTION}/steps.sh scripts/* ${SCRIPTS}/
-RUN chmod a+rx ${SCRIPTS}/*
-ENV  PATH "${SCRIPTS}:${PATH}"
 
-RUN mkdir /builds
-COPY ${ACTION}/builds.yml \
-     ${ACTION}/build.py \
+COPY steps.sh ${SCRIPTS}/
+RUN chmod a+rx ${SCRIPTS}/*
+
+COPY builds.yml \
+     build.py \
      seL4-platforms/platforms.yml \
      seL4-platforms/platforms.py \
      seL4-platforms/builds.py \
-     /builds/
+     /builds
 
 ARG WORKSPACE
-RUN mkdir -p ${WORKSPACE}
 WORKDIR ${WORKSPACE}
 
-ENTRYPOINT steps.sh
+ENTRYPOINT /ci-scripts/steps.sh
