--- a/seL4-platforms/platforms.yml
+++ b/seL4-platforms/platforms.yml
@@ -116,8 +116,8 @@ platforms:
     smp: [64]
     aarch_hyp: [64]
     platform: maaxboard
+    req: [maaxboard1]
     march: armv8a
-    disabled: true
 
   IMX8MM_EVK:
     arch: arm
