--- a/seL4-platforms/platforms.yml
+++ b/seL4-platforms/platforms.yml
@@ -118,6 +118,7 @@ platforms:
     platform: maaxboard
     req: [maaxboard1]
     march: armv8a
+    no_hw_build: true
 
   IMX8MM_EVK:
     arch: arm
