platforms: add ZCU102 target
This adds a ZCU102 platform which will allow the CI workflows to specify
the zcu102 platform, instead of the generic zynqmp.

Signed-off-by: Chris Guikema <chris.guikema@dornerworks.com>

--- a/seL4-platforms/platforms.yml
+++ b/seL4-platforms/platforms.yml
@@ -213,6 +213,14 @@ platforms:
     march: armv7a
     disabled: true
 
+  ZCU102:
+    arch: arm
+    modes: [64]
+    smp: [64]
+    platform: zcu102
+    req: [zcu102_2]
+    march: armv8a
+
   ZYNQMP:
     arch: arm
     modes: [64]
