zcu102: add image_platform
Signed-off-by: Chris Guikema <chris.guikema@dornerworks.com>

--- a/seL4-platforms/platforms.yml
+++ b/seL4-platforms/platforms.yml
@@ -218,6 +218,7 @@ platforms:
     modes: [64]
     smp: [64]
     platform: zcu102
+    image_platform: zynqmp
     req: [zcu102_2]
     march: armv8a
 
