--- a/camkes-vm/builds.yml
+++ b/camkes-vm/builds.yml
@@ -65,6 +65,9 @@ builds:
     platform: TX2
     settings:
         NUM_NODES: 4
+- vm_minimal_C2:
+    app: vm_minimal
+    platform: ODROID_C2
 - vm_serial_server_ODROID_XU4:
     app: vm_serial_server
     platform: ODROID_XU4
