platforms: set MaaXBoard image to binary
Signed-off-by: Ivan Velickovic <i.velickovic@unsw.edu.au>

--- a/seL4-platforms/platforms.yml
+++ b/seL4-platforms/platforms.yml
@@ -119,6 +119,10 @@ platforms:
     req: [maaxboard1]
     march: armv8a
     no_hw_build: true
+    # The MaaxBoard in machine queue expects a binary image
+    settings:
+        Sel4testAllowSettingsOverride: true
+        ElfloaderImage: "binary"
 
   IMX8MM_EVK:
     arch: arm
