--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -6,7 +6,7 @@
 
 name: PR
 
-on: [pull_request]
+on: [pull_request, workflow_call]
 
 jobs:
   gitlint:
@@ -26,3 +26,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: seL4/ci-actions/bashisms@master
+
+  style:
+    name: Style
+    runs-on: ubuntu-latest
+    steps:
+    - uses: seL4/ci-actions/style@master
