--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -10,6 +10,7 @@ on:
     branches:
       - master
   pull_request:
+  workflow_call:
 
 jobs:
   check:
@@ -25,9 +26,3 @@ jobs:
       - uses: seL4/ci-actions/link-check@master
         with:
           exclude: '/node_modules/'
-
-  style:
-    name: Style
-    runs-on: ubuntu-latest
-    steps:
-    - uses: seL4/ci-actions/style@master
