workflows: use job concurrency groups
- use job concurrency instead of workflow concurrency, because on the
  workflow level a label trigger event will already call all current
  runs, whereas the job level is guarded by `if` conditions.

- disambiguate concurrency group names, because the workflow name is
  inherited from the caller.

Signed-off-by: Gerwin Klein <gerwin.klein@proofcraft.systems>

--- a/.github/workflows/sel4bench-pr.yml
+++ b/.github/workflows/sel4bench-pr.yml
@@ -17,19 +17,6 @@ on:
 permissions:
   contents: read
 
-# To reduce the load (especiually on the machine queue) we cancel any older runs
-# of this workflow for the current PR. Such runs exist, if there were new pushes
-# to the PR's branch without waiting for the workflow to finish. As a side
-# effect, pushing new commits now becomes a convenient way to cancel all the
-# older runs, e.g. if they are stuck and would only be stopped by the timeout
-# eventually.
-# Note that we could do the concurrency handling at a finer level, and only wrap
-# the actual run on the hardware. But there seems not much gain in letting the
-# older builds run, as these are usually obsolete with new pushes also.
-concurrency:
-  group: ${{ github.workflow }}-pr-${{ github.event.number }}
-  cancel-in-progress: true
-
 jobs:
   code:
     name: Freeze Code
@@ -54,6 +41,11 @@ jobs:
     name: Build
     needs: code
     runs-on: ubuntu-latest
+    # To reduce the load on GitHub runner numbers and machine queue we cancel
+    # any older runs of this workflow for the current PR.
+    concurrency:
+      group: ${{ github.workflow }}-sel4bench-pr-build-${{ github.event.number }}
+      cancel-in-progress: true
     strategy:
       fail-fast: false
       matrix:
@@ -75,6 +67,9 @@ jobs:
     if: ${{ github.repository_owner == 'seL4' }}
     runs-on: ubuntu-latest
     needs: [build]
+    concurrency:
+      group: ${{ github.workflow }}-sel4bench-pr-hw-run-${{ github.event.number }}
+      cancel-in-progress: true
     strategy:
       fail-fast: false
       matrix:
