--- a/.github/workflows/sel4test-hw.yml
+++ b/.github/workflows/sel4test-hw.yml
@@ -24,8 +24,7 @@ jobs:
   hw-build:
     name: HW Build
     runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'push' ||
-            github.event_name == 'pull_request_target' &&
+    if: ${{ github.event_name == 'pull_request_target' &&
               github.event.action != 'labeled' &&
               (contains(github.event.pull_request.labels.*.name, 'hw-build') ||
                contains(github.event.pull_request.labels.*.name, 'hw-test')) ||
