--- a/.github/workflows/sel4test-hw.yml
+++ b/.github/workflows/sel4test-hw.yml
@@ -21,8 +21,8 @@ permissions:
   contents: read
 
 jobs:
-  hw-build:
-    name: HW Build
+  code:
+    name: Freeze Code
     runs-on: ubuntu-latest
     if: ${{ github.event_name == 'pull_request_target' &&
               github.event.action != 'labeled' &&
@@ -32,7 +32,21 @@ jobs:
               github.event.action == 'labeled' &&
               (github.event.label.name == 'hw-build' ||
                github.event.label.name == 'hw-test') }}
-    # To reduce the load (especiually on the machine queue) we cancel any older
+    outputs:
+      xml: ${{ steps.repo.outputs.xml }}
+    steps:
+    - id: repo
+      uses: seL4/ci-actions/repo-checkout@master
+      with:
+        manifest_repo: sel4test-manifest
+        manifest: master.xml
+        sha: ${{ github.event.pull_request.head.sha }}
+
+  hw-build:
+    name: HW Build
+    runs-on: ubuntu-latest
+    needs: code
+    # To reduce the load (especially on the machine queue) we cancel any older
     # runs of this workflow for the current PR.
     concurrency:
       group: ${{ github.workflow }}-sel4test-pr-build-${{ github.event.number }}
@@ -47,9 +61,9 @@ jobs:
     - name: Build
       uses: seL4/ci-actions/sel4test-hw@master
       with:
+        xml: ${{ needs.code.outputs.xml }}
         march: ${{ matrix.march }}
         compiler: ${{ matrix.compiler }}
-        sha: ${{ github.event.pull_request.head.sha }}
     - name: Upload images
       uses: actions/upload-artifact@v4
       with:
